Staging (#23)
* Exporting alleles of INDELs with unknown sequence as I/D

for GFF and Hapmap formats

* Export optim (#12)

* Modified Hapmap export to be multithreaded

* Parallelized export working for all variant-oriented formats

* Minor change

* Fixed issues with writing variant-list files when exporting

* Modified Hapmap export to make it able to write IGV data

* Individual-oriented exports now working in parallel

* Moved class from Mgdb2 project

* Accounting for assembly to read positions in individual-oriented exports

* Re-added header to top of SNP file

* Minor change

* Added mean to specify a location for export extraction files

* All seems to be working fine

* Ensured temporary warning file gets deleted

* Fixed missing allele list bug that was happening in some cases

... that is, when some alleles were unknown to the VRD record

* Merge pull request #11 from GuilhemSempere/staging (#15)

* POM version update

* Minor change

* JK tree export is no more an ExperimentalFeature

* Added means to dump distance matrix to file (commented out for now)

* Turned NaN values into 3 (bugfix)

* Moved VisualizationService class from Gigwa2ServiceImpl to Mgdb2Export

* Made readToken method static

* Some refactoring

* Moving towards supporting visualization on multiple projects

* Working towards making VizService handle multiple projects' data

* Made charts able to account for several projects at once

* Working around exceptions thrown because of export aborts

* Harmonized the way we build export queries

* Moving towards making UI & exports support working with samples

* Made VizService compatible with detached samples

* Minor fix

* Made IGV data export compatible with detached samples

* Minor change

* Import refactoring and Split Sample into 2 new collections : IndSample and CallSets

* Remove pj and rn fields from GenotypingSample and update queries to get callsets from individuals

* Minor fix

* Minor change

* Minor c