@@ -17,7 +17,6 @@
 package fr.cirad.mgdb.exporting.markeroriented;
 
 import java.io.File;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -31,13 +30,14 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
+import fr.cirad.mgdb.model.mongo.maintypes.*;
 import org.apache.log4j.Logger;
 import org.bson.Document;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -51,15 +51,9 @@ import com.mongodb.client.MongoCursor;
 
 import fr.cirad.mgdb.exporting.IExportHandler;
 import fr.cirad.mgdb.exporting.tools.ExportManager;
-import fr.cirad.mgdb.model.mongo.maintypes.Assembly;
-import fr.cirad.mgdb.model.mongo.maintypes.DBVCFHeader;
 import fr.cirad.mgdb.model.mongo.maintypes.DBVCFHeader.VcfHeaderId;
-import fr.cirad.mgdb.model.mongo.maintypes.GenotypingSample;
-import fr.cirad.mgdb.model.mongo.maintypes.Sequence;
-import fr.cirad.mgdb.model.mongo.maintypes.SequenceStats;
-import fr.cirad.mgdb.model.mongo.maintypes.VariantData;
-import fr.cirad.mgdb.model.mongo.maintypes.VariantRunData;
 import fr.cirad.mgdb.model.mongo.subtypes.AbstractVariantData;
+import fr.cirad.mgdb.model.mongo.subtypes.Callset;
 import fr.cirad.mgdb.model.mongo.subtypes.ReferencePosition;
 import fr.cirad.mgdb.model.mongodao.MgdbDao;
 import fr.cirad.tools.AlphaNumericComparator;
@@ -72,10 +66,13 @@ import htsjdk.samtools.SAMSequenceRecord;
 import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.variantcontext.writer.CustomVCFWriter;
 import htsjdk.variant.vcf.VCFContigHeaderLine;
+import htsjdk.variant.vcf.VCFFilterHeaderLine;
 import htsjdk.variant.vcf.VCFFormatHeaderLine;
 import htsjdk.variant.vcf.VCFHeader;
 import htsjdk.variant.vcf.VCFHeaderLine;
+import htsjdk.variant.vcf.VCFHeaderLineCount;
 import htsjdk.variant.vcf.VCFHeaderLineType;
+import htsjdk.variant.vcf.VCFInfoHeaderLine;
 
 /**
  * The Class VcfExportHandler.
@@ -147,22 +144,25 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 	}
 
     @Override
-    public void exportData(OutputStream outputStream, String sModule, Integer nAssemblyId, String sExportingUser, ProgressIndicator progress, String tmpVarCollName, VariantQueryWrapper varQueryWrapper, long markerCount, Map<String, String> markerSynonyms, Map<String, Collection<String>> individuals, Map<String, HashMap<String, Float>> annotationFieldThresholds, Collection<GenotypingSample> samplesToExport, Collection<String> individualMetadataFieldsToExport, Map<String, InputStream> readyToExportFiles) throws Exception {
-		List<String> sortedIndividuals = samplesToExport.stream().map(gs -> gs.getIndividual()).distinct().sorted(new AlphaNumericComparator<String>()).collect(Collectors.toList());
-
+    public void exportData(OutputStream outputStream, String sModule, Integer nAssemblyId, String sExportingUser, ProgressIndicator progress, String tmpVarCollName, VariantQueryWrapper varQueryWrapper, long markerCount, Map<String, String> markerSynonyms, Map<String, Collection<String>> individualsByPop, boolean workWithSamples, Map<String, HashMap<String, Float>> annotationFieldThresholds, Collection<Callset> callSetsToExport, Collection<String> individualMetadataFieldsToExport, Map<String, InputStream> readyToExportFiles) throws Exception {
+    	TreeSet<String> indSet = new TreeSet<>(new AlphaNumericComparator<String>());
+		for (Callset cs : callSetsToExport)
+			indSet.add(workWithSamples ? cs.getSampleId() : cs.getIndividual());
+		List<String> sortedIndividuals = new ArrayList<>(indSet);
+		
 		MongoTemplate mongoTemplate = MongoTemplateManager.get(sModule);
-        ZipOutputStream zos = IExportHandler.createArchiveOutputStream(outputStream, readyToExportFiles);
+        ZipOutputStream zos = IExportHandler.createArchiveOutputStream(outputStream, readyToExportFiles, null);
         
         Assembly assembly = mongoTemplate.findOne(new Query(Criteria.where("_id").is(nAssemblyId)), Assembly.class);
-		String exportName = sModule + (assembly != null && assembly.getName() != null ? "__" + assembly.getName() : "") + "__" + markerCount + "variants__" + sortedIndividuals.size() + "individuals";
+        String exportName = IExportHandler.buildExportName(sModule, assembly, markerCount, indSet.size(), workWithSamples);
         
         if (individualMetadataFieldsToExport == null || !individualMetadataFieldsToExport.isEmpty())
-        	IExportHandler.addMetadataEntryIfAny(sModule + "__" + sortedIndividuals.size() + "individuals_metadata.tsv", sModule, sExportingUser, sortedIndividuals, individualMetadataFieldsToExport, zos, "individual");
+        	IExportHandler.addMetadataEntryIfAny(sModule + "__" + indSet.size() + (workWithSamples ? "sample" : "individual" ) + "s_metadata.tsv", sModule, sExportingUser, indSet, individualMetadataFieldsToExport, zos, (workWithSamples ? "sample" : "individual"), workWithSamples);
         
         String refPosPathWithTrailingDot = Assembly.getVariantRefPosPath(nAssemblyId) + ".";
         
         Collection<BasicDBList> variantDataQueries = varQueryWrapper.getVariantDataQueries();
-        
+ 
         CustomVCFWriter writer = null;		
 		try {
 			List<String> distinctSequenceNames = new ArrayList<String>();
@@ -192,7 +192,9 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 			SAMSequenceDictionary dict = createSAMSequenceDictionary(sModule, distinctSequenceNames);
 			writer = buildVariantContextWriter(zos, dict);
 			zos.putNextEntry(new ZipEntry(exportName + "." + getExportDataFileExtensions()[0]));
-			File[] warningFiles = writeGenotypeFile(sModule, nAssemblyId, individuals, annotationFieldThresholds, progress, tmpVarCollName, !variantDataQueries.isEmpty() ? variantDataQueries.iterator().next() : new BasicDBList(), markerCount, markerSynonyms, samplesToExport, sortedIndividuals, distinctSequenceNames, dict, writer);
+			Document variantQueryForTargetCollection = variantDataQueries.isEmpty() ? new Document() : (tmpVarCollName == null ? new Document("$and", variantDataQueries.iterator().next()) : (varQueryWrapper.getBareQueries().iterator().hasNext() ? new Document("$and", varQueryWrapper.getBareQueries().iterator().next()) : new Document()));
+
+			File[] warningFiles = writeGenotypeFile(sModule, nAssemblyId, individualsByPop, workWithSamples, annotationFieldThresholds, progress, tmpVarCollName, variantQueryForTargetCollection, markerCount, markerSynonyms, callSetsToExport, sortedIndividuals, distinctSequenceNames, dict, writer);
 			zos.closeEntry();
 
 			IExportHandler.writeZipEntryFromChunkFiles(zos, warningFiles, exportName + "-REMARKS.txt");
@@ -212,24 +214,38 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 				{}
 		}
     }
-		
-    public File[] writeGenotypeFile(String sModule, Integer nAssemblyId, Map<String, Collection<String>> individuals, Map<String, HashMap<String, Float>> annotationFieldThresholds, ProgressIndicator progress, String tmpVarCollName, BasicDBList variantQuery, long markerCount, Map<String, String> markerSynonyms, Collection<GenotypingSample> samplesToExport, List<String> sortedIndividuals, List<String> distinctSequenceNames, SAMSequenceDictionary dict, CustomVCFWriter writer) throws Exception {
+
+    private static VCFInfoHeaderLine getMostPermissiveInfo(VCFInfoHeaderLine line1, VCFInfoHeaderLine line2) {
+        // Prioritize UNBOUNDED count over specific counts
+        VCFHeaderLineCount count = line1.getCountType() == VCFHeaderLineCount.UNBOUNDED ? 
+            line1.getCountType() : line2.getCountType();
+        
+        // Prioritize String type over others (most permissive)
+        VCFHeaderLineType type = line1.getType() == VCFHeaderLineType.String ? 
+            line1.getType() : line2.getType();
+        
+        String description = line1.getDescription() + " / " + line2.getDescription();
+        
+        return new VCFInfoHeaderLine(line1.getID(), count, type, description);
+    }
+
+    private VCFFormatHeaderLine getMostPermissiveFormat(VCFFormatHeaderLine line1, VCFFormatHeaderLine line2) {
+        VCFHeaderLineCount count = line1.getCountType() == VCFHeaderLineCount.UNBOUNDED ? 
+            line1.getCountType() : line2.getCountType();
+        
+        VCFHeaderLineType type = line1.getType() == VCFHeaderLineType.String ? 
+            line1.getType() : line2.getType();
+        
+        String description = line1.getDescription() + " / " + line2.getDescription();
+        
+        return new VCFFormatHeaderLine(line1.getID(), count, type, description);
+    }
+    
+    public File[] writeGenotypeFile(String sModule, Integer nAssemblyId, Map<String, Collection<String>> individualsByPop, boolean workWithSamples, Map<String, HashMap<String, Float>> annotationFieldThresholds, ProgressIndicator progress, String tmpVarCollName, Document variantQuery, long markerCount, Map<String, String> markerSynonyms, Collection<Callset> callSetsToExport, List<String> sortedIndividuals, List<String> distinctSequenceNames, SAMSequenceDictionary dict, CustomVCFWriter writer) throws Exception {
     	MongoTemplate mongoTemplate = MongoTemplateManager.get(sModule);
-		Integer projectId = null;
-		
-		for (GenotypingSample sample : samplesToExport) {
-			if (projectId == null)
-				projectId = sample.getProjectId();
-			else if (projectId != sample.getProjectId())
-			{
-				projectId = 0;
-				break;	// more than one project are involved: no header will be written
-			}
-		}
-		
-	    Map<String, Integer> individualPositions = new LinkedHashMap<>();
-        for (String ind : samplesToExport.stream().map(gs -> gs.getIndividual()).distinct().sorted(new AlphaNumericComparator<String>()).collect(Collectors.toList()))
-            individualPositions.put(ind, individualPositions.size());
+		List<Integer> projectIDs = callSetsToExport.stream().map(cs -> cs.getProjectId()).distinct().toList();
+
+		Map<String, Integer> individualPositions = IExportHandler.buildIndividualPositions(callSetsToExport, workWithSamples);
 
 //			VariantContextWriterBuilder vcwb = new VariantContextWriterBuilder();
 //			vcwb.unsetOption(Options.INDEX_ON_THE_FLY);
@@ -242,20 +258,72 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 
 		progress.moveToNextStep();	// done with dictionary
 		MongoCollection<org.bson.Document> vcfHeaderColl = mongoTemplate.getCollection(MongoTemplateManager.getMongoCollectionName(DBVCFHeader.class));
-		Document vcfHeaderQuery = new Document("_id." + VcfHeaderId.FIELDNAME_PROJECT, projectId);
+		Document vcfHeaderQuery = new Document("_id." + VcfHeaderId.FIELDNAME_PROJECT, new Document("$in", projectIDs));
 		long nHeaderCount = vcfHeaderColl.countDocuments(vcfHeaderQuery);
 		MongoCursor<Document> headerCursor = vcfHeaderColl.find(vcfHeaderQuery).iterator();
-		Set<VCFHeaderLine> headerLines = new HashSet<VCFHeaderLine>();
-		boolean fWriteCommandLine = true, fWriteEngineHeaders = true;	// default values
+
+		Map<String, VCFInfoHeaderLine> mergedInfoHeaders = new LinkedHashMap<>();
+		Map<String, VCFFormatHeaderLine> mergedFormatHeaders = new LinkedHashMap<>();
+		Map<String, VCFFilterHeaderLine> mergedFilterHeaders = new LinkedHashMap<>();
+		Set<VCFHeaderLine> mergedOtherHeaders = new HashSet<>();
+		boolean fWriteCommandLine = true, fWriteEngineHeaders = true;
 
 		while (headerCursor.hasNext()) {
-			DBVCFHeader dbVcfHeader = DBVCFHeader.fromDocument(headerCursor.next());
-			headerLines.addAll(dbVcfHeader.getHeaderLines());
-
-			fWriteCommandLine = nHeaderCount == 1 && dbVcfHeader.getWriteCommandLine();	// wouldn't make sense to include command lines for several runs
-			if (!dbVcfHeader.getWriteEngineHeaders())
-				fWriteEngineHeaders = false;
+		    DBVCFHeader dbVcfHeader = DBVCFHeader.fromDocument(headerCursor.next());
+		    
+		    // Merge INFO headers with conflict resolution
+		    for (Map.Entry<String, VCFInfoHeaderLine> entry : dbVcfHeader.getmInfoMetaData().entrySet()) {
+		        String id = entry.getKey();
+		        VCFInfoHeaderLine newLine = entry.getValue();
+		        
+		        if (mergedInfoHeaders.containsKey(id)) {
+		            VCFInfoHeaderLine existing = mergedInfoHeaders.get(id);
+		            if (!existing.equals(newLine)) {
+		                LOG.warn("Conflicting INFO header definition for '" + id + "'. Using most permissive definition.");
+		                // Keep the most permissive (e.g., UNBOUNDED count, String type)
+		                mergedInfoHeaders.put(id, getMostPermissiveInfo(existing, newLine));
+		            }
+		        } else {
+		            mergedInfoHeaders.put(id, newLine);
+		        }
+		    }
+		    
+		    // Merge FORMAT headers with conflict resolution
+		    for (Map.Entry<String, VCFFormatHeaderLine> entry : dbVcfHeader.getmFormatMetaData().entrySet()) {
+		        String id = entry.getKey();
+		        VCFFormatHeaderLine newLine = entry.getValue();
+		        
+		        if (mergedFormatHeaders.containsKey(id)) {
+		            VCFFormatHeaderLine existing = mergedFormatHeaders.get(id);
+		            if (!existing.equals(newLine)) {
+		                LOG.warn("Conflicting FORMAT header definition for '" + id + "'. Using most permissive definition.");
+		                mergedFormatHeaders.put(id, getMostPermissiveFormat(existing, newLine));
+		            }
+		        } else {
+		            mergedFormatHeaders.put(id, newLine);
+		        }
+		    }
+		    
+		    // Merge FILTER headers
+		    for (Map.Entry<String, VCFFilterHeaderLine> entry : dbVcfHeader.getmFilterMetaData().entrySet()) {
+		        mergedFilterHeaders.putIfAbsent(entry.getKey(), entry.getValue());
+		    }
+		    
+		    // Merge other headers
+		    mergedOtherHeaders.addAll(dbVcfHeader.getmOtherMetaData().values());
+		    mergedOtherHeaders.addAll(dbVcfHeader.getmMetaData().values());
+		    
+		    fWriteCommandLine = nHeaderCount == 1 && dbVcfHeader.getWriteCommandLine();
+		    if (!dbVcfHeader.getWriteEngineHeaders())
+		        fWriteEngineHeaders = false;
 		}
+
+		// Reconstruct headerLines from merged maps
+		Set<VCFHeaderLine> headerLines = new HashSet<>();
+		headerLines.addAll(mergedInfoHeaders.values());
+		headerLines.addAll(mergedFormatHeaders.values());
+		headerLines.addAll(mergedFilterHeaders.values());
+		headerLines.addAll(mergedOtherHeaders);
 		headerCursor.close();
 
 		if (headerLines.size() == 0)
@@ -295,7 +363,7 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 		header.setWriteEngineHeaders(fWriteEngineHeaders);
 		writer.writeHeader(header);
 
-		HashMap<Integer, Object /*phID*/> phasingIDsBySample = new HashMap<>();
+		HashMap<Integer, Object /*phID*/> phasingIDsByCallSet = new HashMap<>();
 		ExportManager.AbstractExportWriter writingThread = new ExportManager.AbstractExportWriter() {
 			public void writeChunkRuns(Collection<Collection<VariantRunData>> markerRunsToWrite, List<String> orderedMarkerIDs, OutputStream genotypeOS, OutputStream variantOS, OutputStream warningOS) throws IOException {
 				if (markerRunsToWrite.isEmpty())
@@ -325,7 +393,7 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 		    					AbstractVariantData variant = runsToWrite == null || runsToWrite.isEmpty() ? mongoTemplate.findById(idOfVarToWrite, VariantData.class) : runsToWrite.iterator().next();
             					try
             					{
-            		                vcChunks[nChunkIndex][nVariantIndex++] = variant.toVariantContext(mongoTemplate, runsToWrite, nAssemblyId, !MgdbDao.idLooksGenerated(idOfVarToWrite), samplesToExport, individualPositions, individuals, annotationFieldThresholds, phasingIDsBySample, warningOS, markerSynonyms == null ? idOfVarToWrite : markerSynonyms.get(idOfVarToWrite));
+            		                vcChunks[nChunkIndex][nVariantIndex++] = variant.toVariantContext(mongoTemplate, runsToWrite, nAssemblyId, !MgdbDao.idLooksGenerated(idOfVarToWrite), callSetsToExport, individualPositions, individualsByPop, workWithSamples, annotationFieldThresholds, phasingIDsByCallSet, warningOS, markerSynonyms == null ? idOfVarToWrite : markerSynonyms.get(idOfVarToWrite));
             					}
             					catch (Exception e)
             					{
@@ -356,7 +424,7 @@ public class VcfExportHandler extends AbstractMarkerOrientedExportHandler {
 		int nQueryChunkSize = IExportHandler.computeQueryChunkSize(mongoTemplate, markerCount);
         String usedCollName = tmpVarCollName != null ? tmpVarCollName : mongoTemplate.getCollectionName(VariantRunData.class);
 		MongoCollection collWithPojoCodec = mongoTemplate.getDb().withCodecRegistry(ExportManager.pojoCodecRegistry).getCollection(usedCollName);
-		ExportManager exportManager = new ExportManager(sModule, nAssemblyId, collWithPojoCodec, VariantRunData.class, variantQuery, samplesToExport, true, nQueryChunkSize, writingThread, markerCount, progress);
+		ExportManager exportManager = new ExportManager(sModule, nAssemblyId, collWithPojoCodec, VariantRunData.class, variantQuery, callSetsToExport, true, nQueryChunkSize, writingThread, markerCount, progress);
 		if (tmpFolderPath != null)
 			exportManager.setTmpExtractionFolder(tmpFolderPath + File.separator + Helper.convertToMD5(progress.getProcessId()));
 		exportManager.readAndWrite(writer.getOutputStream());
